crates/account-macro/tests/account_attribute/enum.fail.stderr
error: Invalid account type
  --> tests/account_attribute/enum.fail.rs:10:1
   |
10 | pub enum TestState {
   | ^^^
